2020-03-22  Martin Pärtel <martin dot partel at gmail dot com>

	* Defined _DARWIN_BETTER_REALPATH to get a non-broken realpath() on Catalina (issue #83).
	* Released 1.14.4

2020-02-12  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --fuse-version.

2020-01-08  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed build with -fno-common, which is the default in GCC 10 (PR #81, thanks jengelh@!).
	* Released 1.14.3

2019-12-21  Martin Pärtel <martin dot partel at gmail dot com>

	* No longer check that numeric UIDs and GIDs exist, since /etc/passwd etc are not always available (issue #79).
	* Released 1.14.2

2019-06-26  Martin Pärtel <martin dot partel at gmail dot com>

	* Resolve symlinks in readdir() so correct attributes are returned (issue #76).
	* Released 1.14.1

2019-04-29  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --forward-odirect. Bindfs now clears O_DIRECT by default (PR #74, thanks barp@!).
	* Released 1.14.0

2019-03-31  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixes to --gid-offset when used with a setgid bit or with --create-as-mounter (PR #73, thanks ehmm@!).
	* Released 1.13.11

2018-10-09  Martin Pärtel <martin dot partel at gmail dot com>

	* Don't call realpath() on source dirs starting with "/proc/". See #66.
	* Released 1.13.10

2017-11-30  Martin Pärtel <martin dot partel at gmail dot com>

	* Added options --delete-deny and --rename-deny as suggested by @roojs.
	* Released 1.13.9

2017-10-26  Martin Pärtel <martin dot partel at gmail dot com>

	* Released 1.13.8

2017-06-17  Martin Pärtel <martin dot partel at gmail dot com>

	* Work around `pathconf(..., _PC_NAME_MAX)` erroneously returning 0
	  for some source filesystems (issue #54).

2017-04-19  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --block-devices-as-files (issue #53).
	* Released 1.13.7.

2017-03-14  Martin Pärtel <martin dot partel at gmail dot com>
